@@ -204,8 +204,8 @@ if ($pun_user['g_read_board'] == '1' && $pun_user['g_search'] == '1')
 
 if ($pun_user['is_guest'])
 {
-	$links[] = '<li id="navregister"'.((PUN_ACTIVE_PAGE == 'register') ? ' class="isactive"' : '').'><a href="register.php">'.$lang_common['Register'].'</a></li>';
-	$links[] = '<li id="navlogin"'.((PUN_ACTIVE_PAGE == 'login') ? ' class="isactive"' : '').'><a href="login.php">'.$lang_common['Login'].'</a></li>';
+	$links[] = '<li id="navregister"'.((PUN_ACTIVE_PAGE == 'register') ? ' class="isactive"' : '').'><a href="' . yii\helpers\Url::to(['/site/signup']) . '">'.$lang_common['Register'].'</a></li>';
+	$links[] = '<li id="navlogin"'.((PUN_ACTIVE_PAGE == 'login') ? ' class="isactive"' : '').'><a href="' . yii\helpers\Url::to(['/site/login']) . '">'.$lang_common['Login'].'</a></li>';
 }
 else
 {
@@ -214,7 +214,27 @@ else
 	if ($pun_user['is_admmod'])
 		$links[] = '<li id="navadmin"'.((PUN_ACTIVE_PAGE == 'admin') ? ' class="isactive"' : '').'><a href="admin_index.php">'.$lang_common['Admin'].'</a></li>';
 
-	$links[] = '<li id="navlogout"><a href="login.php?action=out&amp;id='.$pun_user['id'].'&amp;csrf_token='.pun_csrf_token().'">'.$lang_common['Logout'].'</a></li>';
+	$logout = yii\helpers\Html::beginForm(['/site/logout'], 'post', [
+		'id' => 'logout_form'
+	])
+            . yii\helpers\Html::a(
+                $lang_common['Logout'],// . ' (' . Yii::$app->user->identity->username . ')',
+                'javascript:{}',
+                ['onclick' => 'document.getElementById(\'logout_form\').submit(); return false;']
+             
+            ) . yii\helpers\Html::endForm();
+
+
+
+            $links[] = '<li id="navlogout">' . $logout .'</li>';
+
+
+
+
+
+//            	$links[] = '<li id="navlogout"><a href="' . $logout .'">'.$lang_common['Logout'].'</a></li>';
+
+
 }
 
 // Are there any additional navlinks we should insert into the array before imploding it?
